duniverse/menhirLib.20200211/test/static/bad/semicolon.mly
%%

let main :=
  ~ = foo

let bar =
  main
